# rust-git-describe

./: Cargo.toml  README.md  build.rs
src/: lib.rs
