[package]
name = "git-describe"
repository = "https://github.com/ryankurte/rust-git-describe"
description = "A Rust library to inject and parse git version information at build time"
authors = ["Ryan Kurte <ryan@kurte.nz>"]
license = "MIT"
version = "0.1.1"
edition = "2024"

[features]
build = [ "git2", "anyhow" ]

default = [ "build" ]

[dependencies]
git2 = { version = "0.20", optional = true }
anyhow = { version = "1.0", optional = true }

